Fix css in dark mode

--- a/src/Resources/laravel-debugbar.css
+++ b/src/Resources/laravel-debugbar.css
@@ -808,5 +808,4 @@ div.phpdebugbar-widgets-templates span.phpdebugbar-widgets-param-count:before {
 
 div.phpdebugbar #phpdebugbar-show-duplicates {
     font-weight: bold;
-    text-shadow: 1px 1px #FFF;
 }
